# python_template

./: .bandit.yaml  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.rst  README.rst  setup.cfg  setup.py
.github/: CONTRIBUTING.rst
.github/ISSUE_TEMPLATE/: help-wanted.md
.github/workflows/: test.yml
FIXME/: __init__.py  configure_FIXME.py
FIXME/config/: FIXME.ini
FIXME/utils/: logs.py  paths.py
docker/: Dockerfile  deploy.sh
docs/source/: apidoc.rst  index.rst  structure.rst
docs/source/api/: FIXME.rst
docs/source/examples/: FIXME.rst
docs/source/releases/: 0.0.0a1.rst  index.rst
github/: pull_request_template.md
tests/: conftest.py
