[bdist_wheel]
universal = true

[metadata]
name = FIXME
project = FIXME
version = attr: FIXME.__version__
license = GNU Lesser General Public License v3 or later (LGPLv3+)
license_file = LICENSE
description = Some description
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Michael Løiten
author_email = michael.l.magnussen@gmail.com
maintainer = Michael Løiten
maintainer_email = michael.l.magnussen@gmail.com
url = https://github.com/FIXME/FIXME
keywords =
    FIXME descriptive keyword 1
    FIXME descriptive keyword 2
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: FIXME
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: FIXME
    Topic :: System :: FIXME

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
package_dir=
    =.
packages=find:
test_suite = tests
setup_requires =
    setuptools
install_requires =
    FIXME

[options.packages.find]
exclude=
    tests
    docs

[options.package_data]
* =
    *.ini
    *.yaml

[options.extras_require]
dev =
    pre-commit>=2.4.0
docs =
    numpydoc>=1.0.0
    sphinx>=3.0.4
fast =
    numexpr>=2.7.0
    Bottleneck>=1.3.1
test =
    coverage>=5.3
    pytest>=5.3.0

[options.entry_points]
console_scripts =
    FIXME_config = FIXME.configure_FIXME:main

[mypy]
# Be strict
disallow_untyped_calls=True
warn_return_any=True
strict_optional=True
warn_no_return=True
warn_redundant_casts=True
warn_unused_ignores=True

[mypy-docs.source.*]
# Ignore errors in the docs
ignore_errors = True

[flake8]
max-line-length = 88
extend-ignore = E203, W503
docstring-convention = numpy

[pylint]
load-plugins = pylint.extensions.docparams, pylint.extensions.docstyle, pylint.extensions.mccabe
max-line-length = 88
disable = C0330, C0326, C0199, C0411
accept-no-param-doc = no
accept-no-raise-doc = no
accept-no-return-doc = no
accept-no-yields-doc = no
default-docstring-type = numpy
ignore-imports=yes

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88
